--- a/BHF-grad-task/Web.config
+++ b/BHF-grad-task/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BHF-grad-task-20161110122641.mdf;Initial Catalog=aspnet-BHF-grad-task-20161110122641;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+  <!--<add name="BHFContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\userDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+  <add name="BHFContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=BHF-grad-task;AttachDBFilename=|DataDirectory|\BHF.mdf;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
