--- a/BHF-grad-task/BHF-grad-task.csproj
+++ b/BHF-grad-task/BHF-grad-task.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Donation.cs" />
+    <Compile Include="Models\DonationUserModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\User.cs" />
